fix spacing alignment 2

--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,7 @@ h3{
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   padding-top: 1em;
   padding-bottom: 2em;
